// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select add className 1`] = `
<select
  className="emotion-0 foo"
  multiple={false}
  onChange={[Function]}
  value=""
/>
`;

exports[`Select choices choice 1`] = `
<select
  className="emotion-0"
  multiple={false}
  onChange={[Function]}
  value="medium"
>
  <option
    key="mild"
    value="mild"
  >
    Mild
  </option>
  <option
    key="hot"
    value="hot"
  >
    Hot
  </option>
  <option
    key="fire"
    value="fire"
  >
    Fire
  </option>
</select>
`;

exports[`Select choices choices 1`] = `
<select
  className="emotion-0"
  multiple={false}
  onChange={[Function]}
  value=""
>
  <option
    key="Mild"
    value="Mild"
  >
    Mild
  </option>
  <option
    key="Hot"
    value="Hot"
  >
    Hot
  </option>
  <option
    key="Fire"
    value="Fire"
  >
    Fire
  </option>
</select>
`;

exports[`Select choices choices as objects 1`] = `
<select
  className="emotion-0"
  multiple={false}
  onChange={[Function]}
  value=""
>
  <option
    key="mild"
    value="mild"
  >
    Mild
  </option>
  <option
    key="hot"
    value="hot"
  >
    Hot
  </option>
  <option
    key="fire"
    value="fire"
  >
    Fire
  </option>
</select>
`;

exports[`Select empty 1`] = `
<select
  className="emotion-0"
  multiple={false}
  onChange={[Function]}
  value=""
/>
`;

exports[`Select groups children 1`] = `
<select
  className="emotion-0"
  multiple={false}
  onChange={[Function]}
  value=""
>
  <option
    value="meximelt"
  >
    Mexi-melt
  </option>
</select>
`;

exports[`Select groups children with choices 1`] = `
<select
  className="emotion-0"
  multiple={false}
  onChange={[Function]}
  value=""
>
  <option
    key="mild"
    value="mild"
  >
    Mild
  </option>
  <option
    key="hot"
    value="hot"
  >
    Hot
  </option>
  <option
    key="fire"
    value="fire"
  >
    Fire
  </option>
  <option
    value="meximelt"
  >
    Mexi-melt
  </option>
</select>
`;

exports[`Select groups no value 1`] = `
<select
  className="emotion-0"
  multiple={false}
  onChange={[Function]}
  value=""
>
  <optgroup
    key="Tacos"
    label="Tacos"
  >
    <option
      key="crunchy"
      value="crunchy"
    >
      Crunchy
    </option>
    <option
      key="soft"
      value="soft"
    >
      Soft
    </option>
  </optgroup>
  <optgroup
    key="Saunce"
    label="Saunce"
  >
    <option
      key="mild"
      value="mild"
    >
      Mild
    </option>
    <option
      key="hot"
      value="hot"
    >
      Hot
    </option>
    <option
      key="fire"
      value="fire"
    >
      Fire
    </option>
  </optgroup>
</select>
`;

exports[`Select groups value 1`] = `
<select
  className="emotion-0"
  multiple={false}
  onChange={[Function]}
  value="mild"
>
  <optgroup
    key="Tacos"
    label="Tacos"
  >
    <option
      key="crunchy"
      value="crunchy"
    >
      Crunchy
    </option>
    <option
      key="soft"
      value="soft"
    >
      Soft
    </option>
  </optgroup>
  <optgroup
    key="Saunce"
    label="Saunce"
  >
    <option
      key="mild"
      value="mild"
    >
      Mild
    </option>
    <option
      key="hot"
      value="hot"
    >
      Hot
    </option>
    <option
      key="fire"
      value="fire"
    >
      Fire
    </option>
  </optgroup>
</select>
`;

exports[`Select groups values 1`] = `
<select
  className="emotion-0"
  multiple={true}
  onChange={[Function]}
  value={
    Array [
      "soft",
      "mild",
    ]
  }
>
  <optgroup
    key="Tacos"
    label="Tacos"
  >
    <option
      key="crunchy"
      value="crunchy"
    >
      Crunchy
    </option>
    <option
      key="soft"
      value="soft"
    >
      Soft
    </option>
  </optgroup>
  <optgroup
    key="Saunce"
    label="Saunce"
  >
    <option
      key="mild"
      value="mild"
    >
      Mild
    </option>
    <option
      key="hot"
      value="hot"
    >
      Hot
    </option>
    <option
      key="fire"
      value="fire"
    >
      Fire
    </option>
  </optgroup>
</select>
`;

exports[`Select multiple false 1`] = `
<select
  className="emotion-0"
  multiple={false}
  onChange={[Function]}
  value=""
/>
`;

exports[`Select multiple falsey 1`] = `
<select
  className="emotion-0"
  multiple={true}
  onChange={[Function]}
  value={Array []}
/>
`;

exports[`Select multiple string 1`] = `
<select
  className="emotion-0"
  multiple={true}
  onChange={[Function]}
  value={Array []}
/>
`;

exports[`Select multiple true 1`] = `
<select
  className="emotion-0"
  multiple={true}
  onChange={[Function]}
  value={Array []}
/>
`;

exports[`Select multiple truthy 1`] = `
<select
  className="emotion-0"
  multiple={true}
  onChange={[Function]}
  value={Array []}
/>
`;

exports[`Select placeholder choices 1`] = `
<select
  className="emotion-0"
  multiple={false}
  onChange={[Function]}
  value=""
>
  <option
    key="-- Select Flavor --"
    value=""
  >
    -- Select Flavor --
  </option>
  <option
    key="Mild"
    value="Mild"
  >
    Mild
  </option>
  <option
    key="Hot"
    value="Hot"
  >
    Hot
  </option>
  <option
    key="Fire"
    value="Fire"
  >
    Fire
  </option>
</select>
`;

exports[`Select placeholder choices as objects 1`] = `
<select
  className="emotion-0"
  multiple={false}
  onChange={[Function]}
  value=""
>
  <option
    key="-- Select Flavor --"
    value=""
  >
    -- Select Flavor --
  </option>
  <option
    key="mild"
    value="mild"
  >
    Mild
  </option>
  <option
    key="hot"
    value="hot"
  >
    Hot
  </option>
  <option
    key="fire"
    value="fire"
  >
    Fire
  </option>
</select>
`;

exports[`Select placeholder no choices 1`] = `
<select
  className="emotion-0"
  multiple={false}
  onChange={[Function]}
  value=""
>
  <option
    key="-- Select Flavor --"
    value=""
  >
    -- Select Flavor --
  </option>
</select>
`;
